# dafcore

./: CMakeLists.txt  INSTALL  README  dafcore.pc.cmake  meson.build
lib/: AbstractValueHolder.vala  ArrayListModel.vala  AspectAdapter.vala  BufferedValueHolder.vala  IModelHolder.vala  ModelRegistrar.vala  ValueHolder.vala  meson.build
lib/Binding/: AbstractAcyclicGraph.vala  BindModel.vala  BindModelService.vala  Binder.vala  IBindModelFactory.vala  IBindModelRepository.vala  IBindModelService.vala  IBindTo.vala  IBinder.vala
po/: CMakeLists.txt
src/: AbstractModelHolder.vala  AbstractTypeConverter.vala  ArrayListModel.vala  AspectTrigger.vala  CMakeLists.txt  IAspectTrigger.vala  IListModel.vala  IModelAdapter.vala  IModelPresenter.vala  IValueModel.vala  ModelPresenter.vala  SelectionInList.vala
src/Binding/: AbstractAcyclicGraph.vala  BindKey.vala  BindModelFactory.vala  DefaultBindModelRepository.vala  IBindFrom.vala  IBindModel.vala  IDirectedAcyclicGraph.vala
test/: AspectAdapterTest.vala  AspectTriggerTest.vala  BindingsTest.vala  BufferedValueHolderTest.vala  CMakeLists.txt  ModelPresenterTest.vala  TestMain.vala  TypeConverterTest.vala  ValueHolderTest.vala  meson.build
test/Model/: Address.vala  Gender.vala  Person.vala
