sources = files (
    'IListModel.vala',
    'SelectionInList.vala',
    'ArrayListModel.vala',
    'IModelAdapter.vala',
    'AspectAdapter.vala',
    'Binding/IDirectedAcyclicGraph.vala',
    'Binding/BindModelFactory.vala',
    'Binding/IBindModelRepository.vala',
    'Binding/BindModelService.vala',
    'Binding/IBinder.vala',
    'Binding/DefaultBindModelRepository.vala',
    'Binding/IBindModelService.vala',
    'Binding/IBindFrom.vala',
    'Binding/BindModel.vala',
    'Binding/BindKey.vala',
    'Binding/IBindTo.vala',
    'Binding/AbstractAcyclicGraph.vala',
    'Binding/IBindModel.vala',
    'Binding/IBindModelFactory.vala',
    'Binding/Binder.vala',
    'IAspectTrigger.vala',
    'ModelRegistrar.vala',
    'AbstractModelHolder.vala',
    'ModelPresenter.vala',
    'IModelPresenter.vala',
    'IModelHolder.vala',
    'AbstractTypeConverter.vala',
    'AspectTrigger.vala',
    'BufferedValueHolder.vala',
    'IValueModel.vala',
    'AbstractValueHolder.vala',
    'ValueHolder.vala',
)
