sources = files (
    'ValueHolderTest.vala',
    'TypeConverterTest.vala',
    'BindingsTest.vala',
    'AspectAdapterTest.vala',
    'ModelPresenterTest.vala',
    'Model/Person.vala',
    'Model/Address.vala',
    'Model/Gender.vala',
    'AspectTriggerTest.vala',
    'TestMain.vala',
    'BufferedValueHolderTest.vala',
)
